# postgraphql

./: Cargo.toml  docker-compose.yaml
etc/migrations/: V1__initial.sql
etc/migrations/mysql/: V1__initial.sql  V2__seeddata.sql
src/: app_state.rs  auth.rs  bookstore.rs  db_utils.rs  graphql.rs  handlers.rs  lib.rs  main.rs
src/bookstore/: authors.rs  books.rs  bookstore.rs  mod.rs
src/utils/: inflections.rs  mod.rs
