[package]
name = "postgraphql"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["http1", "json" ] }
tokio = { version = "1.45.1", features = ["full"] }
tower = "0.5.2"
hyper = "1.6.0"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
tower-http = { version = "0.6.4", features = ["trace"] }
postgres = "0.19.10"
tokio-postgres = "0.7.13"
thiserror = "2.0.12"
refinery = { version = "0.8.16", features = ["tokio-postgres"]}
axum-extra = { version = "0.10.1", features = ["typed-header"] }
http = "1.3.1"
serde_json = "1.0.140"
headers = "0.4.1"
jsonwebtoken = "9.3.1"
serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.98"
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "postgres", "mysql" ] }
async-trait = "0.1.88"
